🐞 Fixed image loading bug for smoother UI. 🚀 Squashed bug affecting image display. 🖼️ Resolved critical image rendering issue. 🛠️ Patched bug hindering image loading. ✨ Optimized image display, fixing bug.?

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -157,11 +157,11 @@
 
 *::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: #227aff;
+  background-color: #67a0f6;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #227aff;
+  background-color: #5f9bf6;
 }
 
 *::-webkit-scrollbar-thumb:active {
